--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>뿌띠씰GO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,9 +40,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Kakao map API -->
-    <script 
-      type="text/javascript" 
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9cea69bc7341e5fcace3b6036c50157"
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9cea69bc7341e5fcace3b6036c50157&libraries=services,clusterer"
     ></script>
   </body>
 </html>
